[package]
name = "ntrumls-plus"
version = "0.0.1"
authors = [ "Jeffrey Hoffstein <jhoff@math.brown.edu>",
            "Vladislav Markushin <negigic@gmail.com>" ]
license = "GPL-1.0"
homepage = "https://github.com/NTRUOpenSourceProject/NTRUMLS"
repository = "https://github.com/NEGIhere/rust-NTRUMLS"
description = "Rust bindings for Jeffrey Hoffstein's `NTRUMLS` library."
keywords = [ "crypto", "post-quantum", "ntrumls", "nist", "signature" ]
#readme = "README.md"

build = "build.rs"
links = "ntrumls-plus"

[build-dependencies]
gcc = "0.3"

[lib]
name = "ntrumls"
path = "src/lib.rs"

[features]
unstable = []
default = []

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
rand = "0.3.20"
rustc-serialize = "0.3"
rlibc = "1.0.0"

[dependencies]
libc = "0.2"

[dependencies.rand]
version = "0.3"
optional = true

[dependencies.rustc-serialize]
version = "0.3"
optional = true

[dependencies.serde]
version = "1.0"
optional = true